--- a/measure_privacy.html
+++ b/measure_privacy.html
@@ -37,15 +37,15 @@
 
 <p>This data is collected through <strong>Firebase</strong> and <strong>Firebase Crashlytics</strong> and is used solely for app performance monitoring and crash analysis.</p>
 
-<h3>1.2 Location Information</h3>
+<!-- <h3>1.2 Location Information</h3>
 <p>The Compass feature may request location permission in order to determine and display your current geographic location. Location data is:</p>
 <ul>
     <li>Used only while the Compass feature is active</li>
     <li>Not stored permanently</li>
     <li>Not shared with third parties</li>
-</ul>
+</ul> -->
 
-<h3>1.3 Microphone Access</h3>
+<h3>1.2 Microphone Access</h3>
 <p>The Noise Detection feature requires microphone access to measure ambient sound levels. Audio data is:</p>
 <ul>
     <li>Processed locally on your device</li>
